--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,6 +16,9 @@ jobs:
           php-version: "8.0"
       - uses: actions/checkout@v3
 
+      - name: Install dependencies
+        run: composer update
+
       - name: Create Database
         run: |
           mkdir -p database
