--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Install dependencies
         run: composer update
 
+      - name: Generate Key
+        run: php artisan key:generate
+
       - name: Create Database
         run: |
           mkdir -p database
